--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -1,62 +1,74 @@
 {
-    "$schema": "https://dataapibuilder.azureedge.net/schemas/v0.5.0-beta/dab.draft.schema.json",
-    "data-source": {
-      "database-type": "mssql",
-      "options": {
-        "set-session-context": false
-      },
-      "connection-string": "@env('DATABASE_CONNECTION_STRING')"
+  "$schema": "https://github.com/Azure/data-api-builder/releases/download/v1.1.7/dab.draft.schema.json",
+  "data-source": {
+    "database-type": "mssql",
+    "connection-string": "Server=tcp:complianceflag.database.windows.net,1433;Initial Catalog=ComplianceDB;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active",
+    "options": {
+      "set-session-context": false
+    }
+  },
+  "runtime": {
+    "rest": {
+      "enabled": true,
+      "path": "/rest",
+      "request-body-strict": true
     },
-    "runtime": {
-      "rest": {
-        "path": "/api"
+    "graphql": {
+      "enabled": true,
+      "path": "/graphql",
+      "allow-introspection": true
+    },
+    "host": {
+      "cors": {
+        "origins": [],
+        "allow-credentials": false
       },
-      "graphql": {
-        "path": "/graphql"
+      "authentication": {
+        "provider": "StaticWebApps"
       },
-      "host": {
-        "mode": "development",
-        "cors": {
-          "origins": ["http://localhost:4280"],
-          "allow-credentials": true
+      "mode": "production"
+    }
+  },
+  "entities": {
+    "Author": {
+      "source": "dbo.authors",
+      "permissions": [
+        {
+          "actions": [
+            "*"
+          ],
+          "role": "admin"
         },
-        "authentication": {
-          "provider": "StaticWebApps"
+        {
+          "actions": [
+            "read"
+          ],
+          "role": "anonymous"
+        }
+      ],
+      "relationships": {
+        "books": {
+          "cardinality": "many",
+          "target.entity": "Book"
         }
       }
     },
-    "entities": {
-      "Author": {
-        "source": "dbo.authors",
-        "permissions": [
-          {
-            "actions": ["*"],
-            "role": "admin"
-          },
-          {
-            "actions": ["read"],
-            "role": "anonymous"
-          }
-        ],
-        "relationships": {
-          "books": {
-            "cardinality": "many",
-            "target.entity": "Book"
-          }
+    "Book": {
+      "source": "dbo.books",
+      "permissions": [
+        {
+          "actions": [
+            "*"
+          ],
+          "role": "admin"
+        },
+        {
+          "actions": [
+            "read"
+          ],
+          "role": "anonymous"
         }
-      },
-      "Book": {
-        "source": "dbo.books",
-        "permissions": [
-          {
-            "actions": ["*"],
-            "role": "admin"
-          },
-          {
-            "actions": ["read"],
-            "role": "anonymous"
-          }
-        ]
-      }
+      ]
     }
   }
+}
