--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -2,7 +2,7 @@
   "$schema": "https://github.com/Azure/data-api-builder/releases/download/v1.1.7/dab.draft.schema.json",
   "data-source": {
     "database-type": "mssql",
-    "connection-string": "Server=tcp:complianceflag.database.windows.net,1433;Initial Catalog=ComplianceDB;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active",
+    "connection-string": "${DATABASE_CONNECTION_STRING}",
     "options": {
       "set-session-context": false
     }
