--- a/library-demo/package.json
+++ b/library-demo/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.3",
+    "@azure/data-tables": "^13.2.2",
     "@azure/identity": "^4.5.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
