--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "@azure/data-tables": "^13.2.2",
-    "@azure/functions": "^4.0.0"
+    "@azure/functions": "^4.0.0",
+    "axios": "^1.7.7"
   },
   "main": "src/{index.js,functions/*.js}"
 }
