--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,5 @@
     "azureFunctions.projectLanguage": "JavaScript",
     "azureFunctions.projectRuntime": "~4",
     "debug.internalConsoleOptions": "neverOpen",
-    "azureFunctions.preDeployTask": "npm prune (functions)",
-    "azureFunctions.scmDoBuildDuringDeployment": true,
-    "azureFunctions.projectLanguageModel": 4
+    "azureFunctions.preDeployTask": "npm prune (functions)"
 }
