--- a/api/package.json
+++ b/api/package.json
@@ -1,15 +1,8 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "start": "func start",
-    "test": "echo \"No tests yet...\""
-  },
-  "dependencies": {
-    "@azure/data-tables": "^13.2.2",
-    "@azure/functions": "^4.0.0",
-    "axios": "^1.7.7"
-  },
-  "main": "src/{index.js,functions/*.js}"
+    "name": "functions",
+    "version": "1.0.0",
+    "dependencies": {
+        "@azure/data-tables": "^12.0.0",
+        "axios": "^1.0.0"
+    }
 }
