--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "functions",
+    "name": "api",
     "version": "1.0.0",
     "dependencies": {
         "@azure/data-tables": "^12.0.0",
